DTOs, validators, swagger

--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -3,9 +3,9 @@
 
 ////MODULE
 
-DTOS
-    VALIDATORS
-    SWAGGER INTERGRATION
+////DTOS
+   //// VALIDATORS
+    ////SWAGGER INTERGRATION
 
 SERVICES
     ERROR HANDLING
